Change reference info from Mihon to Komikku

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,11 @@
 blank_issues_enabled: false
 contact_links:
   - name: ⚠️ Application issue
-    url: https://github.com/mihonapp/mihon/issues/new/choose
-    about: Issues and requests about the app itself should be opened in the mihon repository instead
-  - name: 🖥️ Mihon website
-    url: https://mihon.app/help/
+    url: https://github.com/komikku-app/komikku/issues/new/choose
+    about: Issues and requests about the app itself should be opened in the komikku repository instead
+  - name: ⚠️ Extensions issue
+    url: https://github.com/komikku-app/komikku-extensions/issues/new/choose
+    about: Issues and requests about the app itself should be opened in the Komikku-Extensions repository instead
+  - name: 🖥️ Komikku website
+    url: https://komikku-app.github.io/
     about: Guides, troubleshooting, and answers to common questions
