--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -25,6 +25,7 @@ jobs:
       COMMIT_LOGS: ${{ steps.prepare_env.outputs.COMMIT_LOGS }}
       TAG_PREFIX: ${{ steps.prepare_env.outputs.TAG_PREFIX }}
       ARTIFACTS_PREFIX: ${{ steps.prepare_env.outputs.ARTIFACTS_PREFIX }}
+      BUILD_TYPE_NAME: ${{ steps.prepare_env.outputs.BUILD_TYPE_NAME }}
       CHANGELOG: ${{ steps.set_changelog.outputs.CHANGELOG }}
     steps:
       - name: Clone Repository (${{ github.event.inputs.git-ref }})
@@ -70,12 +71,15 @@ jobs:
           if [ "${{ github.event.inputs.git-ref }}" = "master" ]; then
             tag_prefix=r
             artifacts_prefix=standard/preview/app-standard
+            built_type_name=Preview
           else
             tag_prefix=d
             artifacts_prefix=dev/preview/app-dev
+            build_type_name=Develop
           fi
           echo "TAG_PREFIX=$tag_prefix" >> $GITHUB_OUTPUT
           echo "ARTIFACTS_PREFIX=$artifacts_prefix" >> $GITHUB_OUTPUT
+          echo "BUILD_TYPE_NAME=$build_type_name" >> $GITHUB_OUTPUT
 
       - name: Set CHANGELOG
         id: set_changelog
@@ -223,7 +227,7 @@ jobs:
         uses: softprops/action-gh-release@9d7c94cfd0a1f3ed45544c887983e9fa900f0564 # v2.0.4
         with:
           tag_name: ${{ needs.prepare-build.outputs.TAG_PREFIX }}${{ needs.prepare-build.outputs.COMMIT_COUNT }}
-          name: Komikku Preview ${{ needs.prepare-build.outputs.TAG_PREFIX }}${{ needs.prepare-build.outputs.COMMIT_COUNT }}
+          name: Komikku ${{ needs.prepare-build.outputs.BUILD_TYPE_NAME }} ${{ needs.prepare-build.outputs.TAG_PREFIX }}${{ needs.prepare-build.outputs.COMMIT_COUNT }}
           body: |
             ### Commits
 
