--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -83,6 +83,7 @@ jobs:
 
       - name: Set CHANGELOG
         id: set_changelog
+        if: github.event.inputs.git-ref != 'master'
         run: |
           changelog="$(git log ${{ steps.prepare_env.outputs.PREV_RELEASE_SHA }}..${{ steps.prepare_env.outputs.CURRENT_SHA }} --pretty=format:'{{changelogtext}}%s (@%an){{!changelogtext}}')"
           changelog="${changelog//$'%'/%25}"
@@ -95,7 +96,6 @@ jobs:
           changelog="$(echo $changelog | sed -e 's/{{!changelogtext}}/<\/changelogtext>/g')"
           changelog="<?xml version=\"1.0\" encoding=\"utf-8\"?><changelog bulletedList=\"true\"><changelogversion versionName=\"${{ github.run_number }}\" changeDate=\"\">$changelog</changelogversion></changelog>"
           echo "CHANGELOG=$changelog" >> $GITHUB_OUTPUT
-          echo "$changelog"
 
   build-app:
     runs-on: ubuntu-latest
@@ -105,6 +105,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 'komikku-app/komikku'
+          fetch-depth: 0
           ref: ${{ github.event.inputs.git-ref }}
 
       - name: Set up gradle
@@ -147,7 +148,7 @@ jobs:
       # - name: Build app and run unit tests
       #   uses: gradle/gradle-command-action@v2
       #   with:
-      #     arguments: detekt assembleStandardPreview testPreviewUnitTest
+      #     arguments: detekt assembleStandardPreview testStandardPreviewUnitTest
 
       - name: Build Preview APK
         run: ./gradlew assembleStandardPreview testStandardPreviewUnitTest --stacktrace
