--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,10 @@
 {
+  "baseBranches": ["master"],
+  "rebaseWhen": "conflicted",
+  "labels": ["Dependencies"],
+  "automerge": true,
   "extends": [
-    "config:base"
-  ]
+    ["config:best-practices"]
+  ],
+  "includeForks": true
 }
