Move renovate to root to enable on fork

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "baseBranches": ["master"],
+  "baseBranches": ["main"],
   "rebaseWhen": "conflicted",
   "labels": ["Dependencies"],
   "automerge": true,
